# swagger.yaml
@@ -1419,6 +1419,116 @@ paths:
           name: limit
           description: data limit in one page
           required: true
+  "/flight/getFlight/{flight_id}":
+    get:
+      summary: Get Flight
+      tags:
+        - Flight
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        airline:
+                          type: string
+                        origin:
+                          type: string
+                        destination:
+                          type: string
+                        departure:
+                          type: string
+                        departureDate:
+                          type: string
+                        departureTime:
+                          type: string
+                        arrival:
+                          type: string
+                        arrivalDate:
+                          type: string
+                        arrivalTime:
+                          type: string
+              examples:
+                example-1:
+                  value:
+                    status: true
+                    message: Success Get All Data
+                    data:
+                      - id: 1
+                        airline: Calm Air International
+                        origin: YZS
+                        destination: YRT
+                        departure: "2022-12-07T07:00:00.000Z"
+                        departureDate: Wed Dec 07 2022
+                        departureTime: "3:00:00 PM"
+                        arrival: "2022-12-07T07:15:00.000Z"
+                        arrivalDate: Wed Dec 07 2022
+                        arrivalTime: "3:15:00 PM"
+        "":
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                  mesage:
+                    type: string
+                  data:
+                    type: object
+                    properties:
+                      airline:
+                        type: string
+                      origin:
+                        type: string
+                      destination:
+                        type: string
+                      departure:
+                        type: string
+                      arrival:
+                        type: string
+                x-examples:
+                  Example 1:
+                    status: true
+                    mesage: Success Get Data
+                    data:
+                      airline: AirAsia
+                      origin: LGK
+                      destination: KUL
+                      departure: "2022-12-25T02:30:00.000Z"
+                      arrival: "2022-12-25T03:40:00.000Z"
+              examples:
+                Success Get Flight By Id:
+                  value:
+                    status: true
+                    mesage: Success Get Data
+                    data:
+                      airline: AirAsia
+                      origin: LGK
+                      destination: KUL
+                      departure: "2022-12-25T02:30:00.000Z"
+                      arrival: "2022-12-25T03:40:00.000Z"
+      description: "Get Flight By Id "
+      parameters: []
+    parameters:
+      - schema:
+          type: string
+        name: flight_id
+        in: path
+        required: true
   /flight/schedule/search:
     post:
       summary: Filter Flight Schedule
@@ -1681,7 +1791,7 @@ paths:
       security:
         - bearerAuth: []
     parameters: []
-  /flight/edit/{flight_id}:
+  "/flight/edit/{flight_id}":
     parameters:
       - schema:
           type: string
@@ -1754,7 +1864,7 @@ paths:
         description: All fields are required
       tags:
         - Flight
-  /flight/delete/{flight_id}:
+  "/flight/delete/{flight_id}":
     parameters:
       - schema:
           type: string
@@ -2245,7 +2355,7 @@ paths:
       description: Get all booking by user
       security:
         - bearerAuth: []
-  /ticket/print-ticket/{id}:
+  "/ticket/print-ticket/{id}":
     parameters:
       - schema:
           type: string
